--- a/assets/style.css
+++ b/assets/style.css
@@ -26,6 +26,21 @@ body {
  }
 
  p {
- 	line-height: 60px;
- 	font-style: italic;
+ 	line-height: 25px;
+ 	
  }
+
+ ol li {
+ 	line-height: 50px;
+ }
+
+ input[type=text], input[type=password], textarea {
+ 	-webkit-appearance: none;
+ 	padding: 5px;
+ 	border: 1px solid #ccc;
+ }
+
+
+ input[type=text]:focus, input[type=password]:focus, textarea:focus {
+ 	 outline: none;
+ 	} 
