--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,5 @@
 body {
+	
 	padding-top: 120px;
 	font-family: Arial;
 }
@@ -44,3 +45,10 @@ body {
  input[type=text]:focus, input[type=password]:focus, textarea:focus {
  	 outline: none;
  	} 
+
+ form {
+ 	
+ 	border: solid gray 1px;
+ 	border-radius: 5px; 	
+ 	padding: 25px;
+ }
